; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_kpc.c_kpc_set_running_arch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_kpc.c_kpc_set_running_arch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kpc_running_remote = type { i32, i32 }

@kpc_xcall_sync = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@kpc_set_running_xcall = common dso_local global i32 0, align 4
@kpc_running_cfg_pmc_mask = common dso_local global i32 0, align 4
@kpc_running_classes = common dso_local global i32 0, align 4
@kpc_configured = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kpc_set_running_arch(%struct.kpc_running_remote* %0) #0 {
  %2 = alloca %struct.kpc_running_remote*, align 8
  store %struct.kpc_running_remote* %0, %struct.kpc_running_remote** %2, align 8
  %3 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %2, align 8
  %4 = icmp ne %struct.kpc_running_remote* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load i32, i32* @TRUE, align 4
  %8 = load i32, i32* @kpc_set_running_xcall, align 4
  %9 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %2, align 8
  %10 = call i32 @cpu_broadcast_xcall(i32* @kpc_xcall_sync, i32 %7, i32 %8, %struct.kpc_running_remote* %9)
  %11 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %2, align 8
  %12 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* @kpc_running_cfg_pmc_mask, align 4
  %14 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %2, align 8
  %15 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* @kpc_running_classes, align 4
  store i32 1, i32* @kpc_configured, align 4
  ret i32 0
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @cpu_broadcast_xcall(i32*, i32, i32, %struct.kpc_running_remote*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
